<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".activity.AdminActivity">

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:text="@string/delete_text" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_delete"
        android:layout_alignBottom="@+id/btn_delete"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_toLeftOf="@+id/btn_delete"
        android:layout_toStartOf="@+id/btn_delete"
        android:text="@string/edit_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_edit"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_edit"
        android:layout_marginTop="18dp"
        android:text="@string/name_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_delete"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/btn_delete"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_name"
        android:layout_alignStart="@+id/et_name"
        android:layout_below="@+id/et_name"
        android:layout_marginTop="18dp"
        android:text="@string/image_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_name"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignRight="@+id/et_name"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="textWebEditText" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_image"
        android:layout_alignStart="@+id/et_image"
        android:layout_below="@+id/et_image"
        android:layout_marginTop="18dp"
        android:text="@string/description_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_image"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignRight="@+id/et_image"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_description"
        android:layout_alignStart="@+id/et_description"
        android:layout_below="@+id/et_description"
        android:layout_marginTop="18dp"
        android:text="@string/price_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_description"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignRight="@+id/et_description"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_delete"
        android:layout_centerHorizontal="true"
        android:text="@string/add_product" />

</RelativeLayout>